--- a/03_Introduction_to_RAG/03_05_Data_Preparation_for_RAG.ipynb
+++ b/03_Introduction_to_RAG/03_05_Data_Preparation_for_RAG.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     " %%capture\n",
-    "!pip install llama-index==0.10.25 llama-index-llms-cohere llama-index-readers-smart-pdf-loader pymupdf"
+    "!pip install llama-index==0.10.37 llama-index-readers-smart-pdf-loader pymupdf"
    ]
   },
   {
@@ -16,8 +16,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import sys\n",
-    "sys.path.append('.')\n",
+    "import getpass\n",
+    "import nest_asyncio\n",
+    "import fitz\n",
+    "from dotenv import load_dotenv \n",
+    "\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "sys.path.append('../helpers')\n",
+    "\n",
     "from text_cleaning_helpers import clean"
    ]
   },
@@ -59,26 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import getpass\n",
-    "import nest_asyncio\n",
-    "import fitz\n",
-    "from dotenv import load_dotenv \n",
-    "\n",
-    "nest_asyncio.apply()\n",
-    "\n",
-    "load_dotenv()\n",
-    "\n",
-    "CO_API_KEY = os.environ['CO_API_KEY'] or getpass(\"Enter your Cohere API key: \")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,188 +98,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "242"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(simple_directory_reader_docs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BUILDING  JUDGMENT ·  101SHED YOUR IDENTITY TO SEE REALITY\n",
-      "Our egos are constructed in our formative years—our first \n",
-      "two decades. They get constructed by our environment, our \n",
-      "parents, society. Then, we spend the rest of our life trying to \n",
-      "make our ego happy. We interpret anything new through our \n",
-      "ego: “How do I change the external world to make it more how \n",
-      "I would like it to be?” [8]\n",
-      "“Tension is who you think you should be.  \n",
-      "Relaxation is who you are.”\n",
-      "—Buddhist saying\n",
-      "You absolutely need habits to function. You cannot solve every \n",
-      "problem in life as if it is the first time it’s thrown at you. We \n",
-      "accumulate all these habits. We put them in the bundle of \n",
-      "identity, ego, ourselves, and then we get attached to them. “I’m \n",
-      "Naval. This is the way I am.”\n",
-      "It’ s really important to be able to uncondition yourself, to be \n",
-      "able to take your habits apart and say, “Okay, this is a habit I \n",
-      "probably picked up when I was a toddler trying to get my par-\n",
-      "ent’s attention. Now I’ve reinforced it and reinforced it, and \n",
-      "I call it a part of my identity. Does it still serve me? Does it \n",
-      "make me happier? Does it make me healthier? Does it make \n",
-      "me accomplish whatever I set out to accomplish?”\n",
-      "I’m less habitual than most people. I don’t like to structure \n",
-      "my day. To the extent I have habits, I try to make them more \n",
-      "deliberate rather than accidents of history. [4]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(simple_directory_reader_docs[100].get_content())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "932"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(smart_pdf_loader_docs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PART I WEALTH > BUILDING WEALTH > UNDERSTAND HOW WEALTH IS CREATED > How to Get Rich (Without Getting Lucky):\n",
-      "↓ The internet has massively broadened the possible space of careers.\n",
-      "Most people haven’t figured this out yet.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(smart_pdf_loader_docs[100].get_content())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "242"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(pdf_reader_docs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BUILDING  JUDGMENT ·  101SHED YOUR IDENTITY TO SEE REALITY\n",
-      "Our egos are constructed in our formative years—our first \n",
-      "two decades. They get constructed by our environment, our \n",
-      "parents, society. Then, we spend the rest of our life trying to \n",
-      "make our ego happy. We interpret anything new through our \n",
-      "ego: “How do I change the external world to make it more how \n",
-      "I would like it to be?” [8]\n",
-      "“Tension is who you think you should be.  \n",
-      "Relaxation is who you are.”\n",
-      "—Buddhist saying\n",
-      "You absolutely need habits to function. You cannot solve every \n",
-      "problem in life as if it is the first time it’s thrown at you. We \n",
-      "accumulate all these habits. We put them in the bundle of \n",
-      "identity, ego, ourselves, and then we get attached to them. “I’m \n",
-      "Naval. This is the way I am.”\n",
-      "It’ s really important to be able to uncondition yourself, to be \n",
-      "able to take your habits apart and say, “Okay, this is a habit I \n",
-      "probably picked up when I was a toddler trying to get my par-\n",
-      "ent’s attention. Now I’ve reinforced it and reinforced it, and \n",
-      "I call it a part of my identity. Does it still serve me? Does it \n",
-      "make me happier? Does it make me healthier? Does it make \n",
-      "me accomplish whatever I set out to accomplish?”\n",
-      "I’m less habitual than most people. I don’t like to structure \n",
-      "my day. To the extent I have habits, I try to make them more \n",
-      "deliberate rather than accidents of history. [4]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(pdf_reader_docs[100].get_content())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pdf_reader_docs[100].text == simple_directory_reader_docs[100].text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,32 +310,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting texts from The Almanack of Naval Ravikant by Naval Ravikant...\n",
-      "Finished extracting texts from The Almanack of Naval Ravikant.\n",
-      "Extracting texts from The Anthology of Balaji Srinivasan by Balaji Srinivasan...\n",
-      "Finished extracting texts from The Anthology of Balaji Srinivasan.\n",
-      "Extracting texts from Hackers and Painters by Paul Graham...\n",
-      "Finished extracting texts from Hackers and Painters.\n",
-      "Extracting texts from Skin in the Game by Nassim Nicholas Taleb...\n",
-      "Finished extracting texts from Skin in the Game.\n",
-      "Extracting texts from Letters From a Stoic Volume 1 by Seneca...\n",
-      "Finished extracting texts from Letters From a Stoic Volume 1.\n",
-      "Extracting texts from Letters From a Stoic Volume 2 by Seneca...\n",
-      "Finished extracting texts from Letters From a Stoic Volume 2.\n",
-      "Extracting texts from Letters From a Stoic Volume 3 by Seneca...\n",
-      "Finished extracting texts from Letters From a Stoic Volume 3.\n",
-      "Extracting texts from Striking Thoughts by Bruce Lee...\n",
-      "Finished extracting texts from Striking Thoughts.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pdf_files = [\n",
     "    {\n",
@@ -558,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
