--- a/03_Introduction_to_RAG/03_07_Putting_it_All_Together.ipynb
+++ b/03_Introduction_to_RAG/03_07_Putting_it_All_Together.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install llama-index==0.10.25 llama-index-embeddings-fastembed qdrant-client llama-index-vector-stores-qdrant llama-index-llms-cohere"
+    "!pip install llama-index==0.10.37 cohere==5.5.0 openai==1.30.1 llama-index-embeddings-openai==0.1.9 qdrant-client==1.9.1 llama-index-vector-stores-qdrant==0.2.8 llama-index-llms-cohere==0.2.0"
    ]
   },
   {
@@ -49,6 +49,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "OPENAI_API_KEY = os.environ['OPENAI_API_KEY'] or getpass(\"Enter your OpenAI API key: \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "QDRANT_URL = os.environ['QDRANT_URL'] or getpass(\"Enter your Qdrant URL:\")"
    ]
   },
@@ -74,7 +83,10 @@
     "\n",
     "setup_llm(api_key=CO_API_KEY)\n",
     "\n",
-    "setup_embed_model(provider=\"fastembed\")\n",
+    "setup_embed_model(\n",
+    "    provider=\"openai\", \n",
+    "    api_key=OPENAI_API_KEY\n",
+    "    )\n",
     "\n",
     "vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)"
    ]
