--- a/03_Introduction_to_RAG/03_03_Query_Pipeline.ipynb
+++ b/03_Introduction_to_RAG/03_03_Query_Pipeline.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install llama-index==0.10.25 llama-index-embeddings-fastembed qdrant-client llama-index-vector-stores-qdrant llama-index-llms-cohere"
+    "!pip install llama-index==0.10.37 llama-index-embeddings-openai==0.1.9 qdrant-client==1.9.1 llama-index-vector-stores-qdrant==0.2.8 llama-index-llms-cohere==0.2.0"
    ]
   },
   {
@@ -23,7 +23,7 @@
     "import nest_asyncio\n",
     "\n",
     "nest_asyncio.apply()\n",
-    "load_dotenv(\"../.env\")"
+    "load_dotenv()"
    ]
   },
   {
@@ -33,6 +33,15 @@
    "outputs": [],
    "source": [
     "CO_API_KEY = os.environ['CO_API_KEY'] or getpass(\"Enter your Cohere API key: \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OPENAI_API_KEY = os.environ['OPENAI_API_KEY'] or getpass(\"Enter your OpenAI API key: \")"
    ]
   },
   {
@@ -72,10 +81,11 @@
    "source": [
     "from llama_index.core.settings import Settings\n",
     "from llama_index.llms.cohere import Cohere\n",
-    "from llama_index.embeddings.fastembed import FastEmbedEmbedding\n",
+    "from llama_index.embeddings.openai import OpenAIEmbedding\n",
     "\n",
-    "Settings.llm = Cohere(model=\"command-r\", api_key=CO_API_KEY)\n",
-    "Settings.embed_model = FastEmbedEmbedding(model_name=\"BAAI/bge-large-en-v1.5-quantized\")"
+    "Settings.llm = Cohere(model=\"command-r-plus\", api_key=CO_API_KEY)\n",
+    "\n",
+    "Settings.embed_model = OpenAIEmbedding(model_name=\"text-embedding-3-small\", api_key=OPENAI_API_KEY)"
    ]
   },
   {
