--- a/03_Introduction_to_RAG/03_04_Prompt_Engineering_for_RAG.ipynb
+++ b/03_Introduction_to_RAG/03_04_Prompt_Engineering_for_RAG.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install llama-index==0.10.25 llama-index-embeddings-fastembed qdrant-client llama-index-vector-stores-qdrant llama-index-llms-cohere"
+    "!pip install llama-index==0.10.37 llama-index-embeddings-openai==0.1.9 qdrant-client==1.9.1 llama-index-vector-stores-qdrant==0.2.8 llama-index-llms-cohere==0.2.0"
    ]
   },
   {
@@ -25,11 +25,11 @@
     "\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "load_dotenv(\"../.env\")\n",
+    "load_dotenv()\n",
     "\n",
     "sys.path.append('../helpers')\n",
     "\n",
-    "from utils import setup_llm, setup_embed_model, create_vector_store_index"
+    "from utils import setup_llm, setup_embed_model, create_index"
    ]
   },
   {
@@ -39,6 +39,15 @@
    "outputs": [],
    "source": [
     "CO_API_KEY = os.environ['CO_API_KEY'] or getpass(\"Enter your Cohere API key: \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OPENAI_API_KEY = os.environ['OPENAI_API_KEY'] or getpass(\"Enter your OpenAI API key: \")"
    ]
   },
   {
@@ -66,15 +75,21 @@
    "outputs": [],
    "source": [
     "from llama_index.core.settings import Settings\n",
-    "from utils import setup_llm, setup_embed_model, create_vector_store_index\n",
+    "from llama_index.core import StorageContext\n",
     "\n",
-    "setup_llm(api_key=CO_API_KEY)\n",
+    "from utils import setup_llm, setup_embed_model, setup_vector_store, create_index\n",
     "\n",
-    "setup_embed_model()\n",
+    "setup_llm(provider=\"cohere\", model=\"command-r-plus\", api_key=CO_API_KEY)\n",
+    "\n",
+    "setup_embed_model(provider=\"openai\", api_key=OPENAI_API_KEY)\n",
     "\n",
     "COLLECTION_NAME = \"it_can_be_done\"\n",
     "\n",
-    "index = create_vector_store_index(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)"
+    "vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)\n",
+    "\n",
+    "storage_context = StorageContext.from_defaults(vector_store=vector_store)\n",
+    "\n",
+    "index = create_index(from_where=\"vector_store\", vector_store=vector_store, storage_context=storage_context)"
    ]
   },
   {
@@ -100,8 +115,9 @@
    "outputs": [],
    "source": [
     "query_engine = create_query_engine(\n",
-    "    index,\n",
+    "    index=index,\n",
     "    similarity_top_k=3, \n",
+    "    mode=\"query\",\n",
     "    return_sources=True\n",
     "    )\n",
     "\n",
