--- a/05_Advanced_RAG_Pre_Retrieval/05_04_Semantic_Chunking.ipynb
+++ b/05_Advanced_RAG_Pre_Retrieval/05_04_Semantic_Chunking.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install llama-index==0.10.25 llama-index-embeddings-fastembed qdrant-client llama-index-vector-stores-qdrant llama-index-llms-cohere"
+    "!pip install llama-index==0.10.37 llama-index-embeddings-openai==0.1.9 qdrant-client==1.9.1 llama-index-vector-stores-qdrant==0.2.8 llama-index-llms-openai==0.1.19"
    ]
   },
   {
@@ -73,7 +73,7 @@
     "setup_llm(\n",
     "    provider=\"openai\",\n",
     "    api_key=OPENAI_API_KEY, \n",
-    "    model=\"gpt-3.5-turbo\", \n",
+    "    model=\"gpt-4o\", \n",
     "    temperature=0.75, \n",
     "    system_prompt=\"\"\"Use ONLY the provided context and generate a complete, coherent answer to the user's query. \n",
     "    Your response must be grounded in the provided context and relevant to the essence of the user's query.\n",
@@ -443,20 +443,6 @@
     "    print(f\"\"\"\"🧠🤖 Reponse: {row[\"semantic-nodes-answer\"]}\"\"\")\n",
     "    print(\"\\n\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
