--- a/06_Advanced_RAG_Post_Retrieval/06_03_FLARE.ipynb
+++ b/06_Advanced_RAG_Post_Retrieval/06_03_FLARE.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install qdrant-client llama-index==0.10.25 llama-index-embeddings-openai  llama-index-vector-stores-qdrant llama-index-llms-openai  llama-index-postprocessor-cohere-rerank"
+    "!pip install llama-index==0.10.37 llama-index-embeddings-openai==0.1.9 qdrant-client==1.9.1 llama-index-vector-stores-qdrant==0.2.8 llama-index-llms-openai==0.1.19"
    ]
   },
   {
@@ -71,7 +71,11 @@
     "from llama_index.llms.openai import OpenAI\n",
     "from utils import setup_llm, setup_embed_model\n",
     "\n",
-    "setup_llm(provider=\"openai\", model=\"gpt-3.5-turbo\", api_key=OPENAI_API_KEY)\n",
+    "setup_llm(\n",
+    "    provider=\"openai\", \n",
+    "    model=\"gpt-4o\", \n",
+    "    api_key=OPENAI_API_KEY\n",
+    "    )\n",
     "\n",
     "setup_embed_model(provider=\"openai\", api_key=OPENAI_API_KEY)"
    ]
@@ -196,7 +200,7 @@
     "setup_llm(\n",
     "    provider=\"openai\",\n",
     "    api_key=OPENAI_API_KEY, \n",
-    "    model=\"gpt-3.5-turbo\", \n",
+    "    model=\"gpt-4o\", \n",
     "    temperature=0.75, \n",
     "    system_prompt=\"\"\"Use ONLY the provided context and generate a complete, coherent answer to the user's query. \n",
     "    Your response must be grounded in the provided context and relevant to the essence of the user's query.\n",
