--- a/02_Fundamental_Concepts_in_LlamaIndex/02_05_Storing.ipynb
+++ b/02_Fundamental_Concepts_in_LlamaIndex/02_05_Storing.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install llama-index==0.10.37 llama-index-embeddings-cohere==0.1.8 llama-index-llms-cohere==0.2.0 qdrant-client==1.9.1 llama-index-vector-stores-qdrant==0.2.8 "
+    "!pip install llama-index==0.10.37 cohere==5.5.0 openai==1.30.1 llama-index-embeddings-openai==0.1.9 llama-index-llms-cohere==0.2.0 qdrant-client==1.9.1 llama-index-vector-stores-qdrant==0.2.8 "
    ]
   },
   {
@@ -38,16 +38,30 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# 🗄️ Storing\n",
-    "\n",
-    "Loading and indexing data costs time and money.\n",
-    "\n",
-    "By default, indexed data is stored in memory. But, you can store your data to avoid the time and costs associated with re-indexing them.  The simplest way to do this **persisting to disk**.\n",
-    "\n",
-    "Each `Index` object has a `.persist()` method, which will write all the data to disk at the specified location."
+    "OPENAI_API_KEY = os.environ['OPENAI_API_KEY'] or getpass(\"Enter your OpenAI API key: \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "QDRANT_URL = os.environ['QDRANT_URL'] or getpass(\"Enter your Qdrant URL:\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "QDRANT_API_KEY = os.environ['QDRANT_API_KEY'] or  getpass(\"Enter your Qdrant API Key:\")"
    ]
   },
   {
@@ -63,9 +77,7 @@
     "    path.mkdir(parents=True, exist_ok=True)\n",
     "    print(f\"Directory '{directory_name}' created successfully.\")\n",
     "\n",
-    "create_directory(\"data\")\n",
-    "\n",
-    "create_directory(\"persisted_storage\")"
+    "create_directory(\"data\")"
    ]
   },
   {
@@ -74,7 +86,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget -P data https://www.gutenberg.org/cache/epub/10763/pg10763.txt"
+    "!wget -P data https://www.gutenberg.org/cache/epub/10763/pg10763.txt "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 🗄️ Storing\n",
+    "\n",
+    "Loading and indexing data costs time and money.\n",
+    "\n",
+    "By default, indexed data is stored in memory. But, you can store your data to avoid the time and costs associated with re-indexing them.  The simplest way to do this **persisting to disk**.\n",
+    "\n",
+    "Each `Index` object has a `.persist()` method, which will write all the data to disk at the specified location."
    ]
   },
   {
@@ -94,7 +119,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load as document\n",
     "from llama_index.core import SimpleDirectoryReader\n",
     "\n",
     "file_path = \"data/pg10763.txt\"\n",
@@ -108,16 +132,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# parse as nodes\n",
+    "# Create Node parser\n",
     "from llama_index.core.node_parser import SentenceSplitter\n",
     "\n",
     "sentence_splitter = SentenceSplitter(\n",
     "    chunk_size=512, \n",
     "    chunk_overlap=16,\n",
     "    paragraph_separator=\"\\n\\n\\n\\n\" \n",
-    ")\n",
-    "\n",
-    "nodes = sentence_splitter.get_nodes_from_documents(document)"
+    ")"
    ]
   },
   {
@@ -126,62 +148,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create index\n",
-    "from llama_index.embeddings.cohere import CohereEmbedding\n",
-    "from llama_index.core import  VectorStoreIndex\n",
+    "# Instantiate embedding model\n",
+    "from llama_index.embeddings.openai import OpenAIEmbedding\n",
     "\n",
-    "embed_model = CohereEmbedding(model_name=\"embed-english-v3.0\")\n",
-    "\n",
-    "index = VectorStoreIndex(nodes, embed_model=embed_model)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Use the `.persist()` method of the index to store the indexed data to disk. Now you can avoid re-loading and re-indexing your data by loading the persisted index."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "index.storage_context.persist(persist_dir=\"persisted_storage\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 🗃️ Storege Context\n",
-    "\n",
-    "`StorageContext` in `LlamaIndex` is a core abstraction that revolves around the storage of `Nodes`, indices, and vectors. \n",
-    "\n",
-    "It is a utility container that includes the following:\n",
-    "\n",
-    " - `docstore`: A [`BaseDocumentStore`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/storage/docstore/types.py) for storing nodes.\n",
-    "\n",
-    " - `index_store`: A [`BaseIndexStore`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/storage/index_store/types.py#L13) for storing indices.\n",
-    "\n",
-    " - `vector_store`: A [`VectorStore`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/vector_stores/simple.py) for storing vectors.\n",
-    "\n",
-    " - `graph_store`: A [`GraphStore`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/graph_stores/simple.py) for storing knowledge graphs.\n",
-    "\n",
-    "The `StorageContext` can be created with default settings, comprising a document store, index store, vector store, and graph store. It enables storing the context in a specific directory, facilitating data storage and retrieval from disk to save time and indexing expenses."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.core import StorageContext, load_index_from_storage\n",
-    "\n",
-    "# rebuild storage context\n",
-    "storage_context = StorageContext.from_defaults(persist_dir=\"persisted_storage\")"
+    "embed_model = OpenAIEmbedding(model_name=\"text-embedding-3-small\")"
    ]
   },
   {
@@ -214,32 +184,69 @@
     "import qdrant_client\n",
     "from llama_index.vector_stores.qdrant import QdrantVectorStore\n",
     "\n",
-    "create_directory(\"persisted_storage/qdrant\")\n",
-    "\n",
     "# initialize qdrant client\n",
     "client = qdrant_client.QdrantClient(\n",
-    "    path=\"persisted_storage/qdrant\"\n",
+    "    url=QDRANT_URL, \n",
+    "    api_key=QDRANT_API_KEY,\n",
     ")\n",
     "\n",
     "vector_store = QdrantVectorStore(\n",
     "    client=client, \n",
     "    collection_name=\"it_can_be_done\",\n",
-    "    prefer_grpc=True\n",
-    ")\n",
+    "    embed_model=embed_model,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 🗃️ Storage Context\n",
+    "\n",
+    "`StorageContext` in `LlamaIndex` is a core abstraction that revolves around the storage of `Nodes`, indices, and vectors.  It facilitates data storage and retrieval.\n",
+    "\n",
+    "It is a utility container that supports the following:\n",
+    "\n",
+    " - `docstore`: A [`BaseDocumentStore`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/storage/docstore/types.py) for storing nodes.\n",
+    "\n",
+    " - `index_store`: A [`BaseIndexStore`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/storage/index_store/types.py#L13) for storing indices.\n",
+    "\n",
+    " - `vector_store`: A [`VectorStore`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/vector_stores/simple.py) for storing vectors.\n",
+    "\n",
+    " - `graph_store`: A [`GraphStore`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/graph_stores/simple.py) for storing knowledge graphs.\n",
+    "\n",
+    "Below we instantiate the `StorageContext` from default settings indicating that we want to use a vector store."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.core import StorageContext\n",
     "\n",
     "# assign qdrant vector store to storage context\n",
     "storage_context = StorageContext.from_defaults(\n",
-    "    vector_store=vector_store)\n",
+    "    vector_store=vector_store,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.core import  VectorStoreIndex\n",
     "\n",
     "# create the index\n",
-    "index = VectorStoreIndex(\n",
-    "    nodes,\n",
+    "index = VectorStoreIndex.from_documents(\n",
+    "    document,\n",
+    "    transformation=[sentence_splitter],\n",
     "    embed_model=embed_model,\n",
-    "    storage_context=storage_context\n",
-    ")\n",
-    "\n",
-    "# You can persist the `qdrant` index to disk for future use\n",
-    "index.storage_context.persist(persist_dir=\"persisted_storage/qdrant\")"
+    "    storage_context=storage_context,\n",
+    ")"
    ]
   },
   {
