--- a/02_Fundamental_Concepts_in_LlamaIndex/02_06_Querying.ipynb
+++ b/02_Fundamental_Concepts_in_LlamaIndex/02_06_Querying.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install llama-index==0.10.37 llama-index-embeddings-cohere==0.1.8 llama-index-llms-cohere==0.2.0 qdrant-client==1.9.1 llama-index-vector-stores-qdrant==0.2.8 "
+    "!pip install llama-index==0.10.37 cohere==5.5.0 openai==1.30.1 llama-index-embeddings-openai==0.1.9 llama-index-llms-cohere==0.2.0 qdrant-client==1.9.1 llama-index-vector-stores-qdrant==0.2.8 "
    ]
   },
   {
@@ -38,6 +38,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OPENAI_API_KEY = os.environ['OPENAI_API_KEY'] or getpass(\"Enter your OpenAI API key: \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "QDRANT_URL = os.environ['QDRANT_URL'] or getpass(\"Enter your Qdrant URL:\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "QDRANT_API_KEY = os.environ['QDRANT_API_KEY'] or  getpass(\"Enter your Qdrant API Key:\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -58,42 +85,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
-    "file_path = 'persisted_storage/qdrant/docstore.json'\n",
-    "print(os.path.exists(file_path))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import qdrant_client\n",
-    "from llama_index.embeddings.cohere import CohereEmbedding\n",
+    "from llama_index.embeddings.openai import OpenAIEmbedding\n",
     "from llama_index.core import VectorStoreIndex\n",
     "from llama_index.vector_stores.qdrant import QdrantVectorStore\n",
     "from llama_index.core import StorageContext\n",
     "\n",
-    "embed_model = CohereEmbedding(model_name=\"embed-english-v3.0\")\n",
+    "embed_model = OpenAIEmbedding(model_name=\"text-embedding-3-small\")\n",
     "\n",
     "# initialize qdrant client\n",
     "client = qdrant_client.QdrantClient(\n",
-    "    path=\"persisted_storage/qdrant\"\n",
+    "    url=QDRANT_URL, \n",
+    "    api_key=QDRANT_API_KEY,\n",
     ")\n",
     "\n",
     "vector_store = QdrantVectorStore(\n",
     "    client=client, \n",
     "    collection_name=\"it_can_be_done\",\n",
-    "    path=\"persisted_storage/qdrant/\",\n",
-    "    prefer_grpc=True\n",
+    "    embed_model=embed_model,\n",
     ")\n",
     "\n",
     "# assign qdrant vector store to storage context\n",
     "storage_context = StorageContext.from_defaults(\n",
     "    vector_store=vector_store,\n",
-    "    persist_dir=\"persisted_storage/qdrant\"\n",
     "    )\n",
     "\n",
     "# load your index from stored vectors\n",
@@ -308,6 +322,13 @@
    "source": [
     "client.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
