--- a/04_RAG_Evaluation/04_03_How_to_Create_an_Evaluation_Set.ipynb
+++ b/04_RAG_Evaluation/04_03_How_to_Create_an_Evaluation_Set.ipynb
@@ -386,7 +386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "critic_llm = OpenAI(model=\"gpt-4-turbo-2024-04-09\")"
+    "critic_llm = OpenAI(model=\"gpt-4o\")"
    ]
   },
   {
@@ -478,8 +478,6 @@
     "# You can find the dataset on Hugging Face\n",
     "\n",
     "You don't have to run the examples here if you don't want to incur costs from OpenAI. \n",
-    "\n",
-    "I've made the dataset available on Hugging Face, and I'll show you how to load it when we need to make use of it. \n",
     "\n",
     "[Here's the dataset](https://huggingface.co/datasets/harpreetsahota/LI_Learning_RAG_Eval_Set). You can click around and explore using the dataset viewer. If you sign-up for an account on Hugging Face, feel free to [follow me](https://huggingface.co/harpreetsahota)!\n",
     "\n"
