--- a/02_Fundamental_Concepts_in_LlamaIndex/02_07_Agents.ipynb
+++ b/02_Fundamental_Concepts_in_LlamaIndex/02_07_Agents.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install llama-index==0.10.37 llama-index-embeddings-cohere==0.1.8 llama-index-llms-cohere==0.2.0 qdrant-client==1.9.1 llama-index-vector-stores-qdrant==0.2.8 "
+    "!pip install llama-index==0.10.37 cohere==5.5.0 llama-index-embeddings-cohere==0.1.8 llama-index-llms-cohere==0.2.0 qdrant-client==1.9.1 llama-index-vector-stores-qdrant==0.2.8 "
    ]
   },
   {
@@ -49,13 +49,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -85,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,16 +148,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'description': \"multiply(a: int, b: int) -> int\\n\\n    Multiplies two integers in an alternative universe's mathematical rules. \\n    Specifically, it multiplies the second integer by 1.25 and then multiplies the result with the first integer. \\n    Returns the final multiplication result as an integer.\\n    \\n    Parameters:\\n    a (int): The first integer to multiply.\\n    b (int): The second integer, which is first multiplied by 1.25 before the overall multiplication.\\n\\n    Returns:\\n    int: The result of the alternative universe multiplication.\\n    \",\n",
+       " 'name': 'multiply',\n",
+       " 'fn_schema': pydantic.v1.main.multiply,\n",
+       " 'return_direct': False}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "multiply_tool.metadata.__dict__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,20 +195,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are designed to help with a variety of tasks, from answering questions to providing summaries to other types of analyses.\n",
+      "\n",
+      "## Tools\n",
+      "\n",
+      "You have access to a wide variety of tools. You are responsible for using the tools in any sequence you deem appropriate to complete the task at hand.\n",
+      "This may require breaking the task into subtasks and using different tools to complete each subtask.\n",
+      "\n",
+      "You have access to the following tools:\n",
+      "{tool_desc}\n",
+      "\n",
+      "\n",
+      "## Output Format\n",
+      "\n",
+      "Please answer in the same language as the question and use the following format:\n",
+      "\n",
+      "```\n",
+      "Thought: The current language of the user is: (user's language). I need to use a tool to help me answer the question.\n",
+      "Action: tool name (one of {tool_names}) if using a tool.\n",
+      "Action Input: the input to the tool, in a JSON format representing the kwargs (e.g. {{\"input\": \"hello world\", \"num_beams\": 5}})\n",
+      "```\n",
+      "\n",
+      "Please ALWAYS start with a Thought.\n",
+      "\n",
+      "Please use a valid JSON format for the Action Input. Do NOT do this {{'input': 'hello world', 'num_beams': 5}}.\n",
+      "\n",
+      "If this format is used, the user will respond in the following format:\n",
+      "\n",
+      "```\n",
+      "Observation: tool response\n",
+      "```\n",
+      "\n",
+      "You should keep repeating the above format till you have enough information to answer the question without using any more tools. At that point, you MUST respond in the one of the following two formats:\n",
+      "\n",
+      "```\n",
+      "Thought: I can answer without using any more tools. I'll use the user's language to answer\n",
+      "Answer: [your answer here (In the same language as the user's question)]\n",
+      "```\n",
+      "\n",
+      "```\n",
+      "Thought: I cannot answer the question with the provided tools.\n",
+      "Answer: [your answer here (In the same language as the user's question)]\n",
+      "```\n",
+      "\n",
+      "## Current Conversation\n",
+      "\n",
+      "Below is the current conversation consisting of interleaving human and assistant messages.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(agent_prompts['agent_worker:system_prompt'].template)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19.58"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "add(multiply(3,4), 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;3;38;5;200mThought: The current language of the user is: not specified. I need to use a tool to help me answer the question.\n",
+      "Action: tool\n",
+      "Action Input: {'a': 3, 'b': 4}\n",
+      "\u001b[0m\u001b[1;3;34mObservation: Error: No such tool named `tool`.\n",
+      "\u001b[0m\u001b[1;3;38;5;200mThought: It seems that I need to use multiple tools to answer this question. I'll first use the `multiply` tool.\n",
+      "Action: multiply\n",
+      "Action Input: {'a': 3, 'b': 4}\n",
+      "\u001b[0m\u001b[1;3;34mObservation: 15.0\n",
+      "\u001b[0m\u001b[1;3;38;5;200mThought: The result of the multiplication is 15. Now, I'll use the `add` tool to add 5 to this result.\n",
+      "Action: add\n",
+      "Action Input: {'a': 15, 'b': 5}\n",
+      "\u001b[0m\u001b[1;3;34mObservation: 19.58\n",
+      "\u001b[0m\u001b[1;3;38;5;200mThought: The final result after addition is 19.58. I can now answer the question without using any more tools.\n",
+      "Answer: The answer is 19.58.\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "response = agent.chat(\"\"\"You live in an alternate universe. Math works according to the tools provided. Use the provided tools to multiply 3 by 4 and add 5 to the result\"\"\")"
    ]
   },
   {
@@ -209,9 +312,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "response = agent.chat(\"\"\"You live in an alternate universe. Math works according to the tools provided. Use the provided tools to multiply 3 by 4 and add 5 to the result\"\"\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -230,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
